err/django-orm-extensions.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_orm'...
Listing './lib/python3.5/site-packages/django_orm/cache'...
Listing './lib/python3.5/site-packages/django_orm/core'...
Listing './lib/python3.5/site-packages/django_orm/core/sql'...
Listing './lib/python3.5/site-packages/django_orm/gis'...
Listing './lib/python3.5/site-packages/django_orm/mysql'...
Listing './lib/python3.5/site-packages/django_orm/postgresql'...
Listing './lib/python3.5/site-packages/django_orm/postgresql/composite'...
Compiling './lib/python3.5/site-packages/django_orm/postgresql/composite/__init__.py'...
***   File "./lib/python3.5/site-packages/django_orm/postgresql/composite/__init__.py", line 122
    print "Registering %s type" % (cls.type_name())
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_orm/postgresql/fields'...
Listing './lib/python3.5/site-packages/django_orm/postgresql/fulltext'...
Listing './lib/python3.5/site-packages/django_orm/postgresql/geometric'...
Compiling './lib/python3.5/site-packages/django_orm/postgresql/geometric/__init__.py'...
***   File "./lib/python3.5/site-packages/django_orm/postgresql/geometric/__init__.py", line 10
    print "Registering:", obj_class.__name__
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_orm/postgresql/hstore'...
Listing './lib/python3.5/site-packages/django_orm/postgresql/sql'...
Listing './lib/python3.5/site-packages/django_orm/sqlite3'...
Listing './lib/python3.5/site-packages/django_orm/templatetags'...
Listing './lib/python3.5/site-packages/django_orm_extensions-3.0b3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
